# clearskies-aws

./: .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: create-version.yaml  docs.yaml  run-tests.yml  tests-matrix.yaml
docs/jekyll/: Gemfile  _config.yml  changelog.md  index.md
docs/jekyll/_includes/: head_custom.html  header_custom.html
docs/jekyll/_sass/custom/: custom.scss
docs/python/: README.md  build.py  config.json  update_manifest.py
src/clearskies_aws/: __init__.py  web_socket_connection_model.py
src/clearskies_aws/actions/: __init__.py  action_aws.py  assume_role.py  assume_role_test.py  ses.py  ses_test.py  sns.py  sns_test.py  sqs.py  sqs_test.py  step_function.py  step_function_test.py
src/clearskies_aws/backends/: __init__.py  backend.py  dummy_backend.py  dynamo_db_backend.py  dynamo_db_backend_test.py  dynamo_db_condition_parser.py  dynamo_db_condition_parser_test.py  dynamo_db_parti_ql_backend.py  dynamo_db_parti_ql_backend_test.py  sqs_backend.py  sqs_backend_test.py
src/clearskies_aws/contexts/: __init__.py  aws_http_api_gateway.py  aws_lambda_api_gateway.py  aws_lambda_elb.py  cli.py  cli_web_socket_mock.py  cli_websocket_mock.py  context.py  lambda_alb.py  lambda_api_gateway.py  lambda_api_gateway_web_socket.py  lambda_elb.py  lambda_http_gateway.py  lambda_invocation.py  lambda_sns.py  lambda_sns_event.py  lambda_sqs_standard_partial_batch.py  lambda_sqs_standard_partial_batch_test.py  lambda_sqs_standard_queue_partial_batch.py  wsgi.py
src/clearskies_aws/di/: __init__.py  di.py  iam_db_auth.py  standard_dependencies.py
src/clearskies_aws/di/inject/: __init__.py  boto3.py  boto3_session.py  parameter_store.py
src/clearskies_aws/handlers/: __init__.py  secrets_manager_rotation.py  simple_body_routing.py
src/clearskies_aws/input_outputs/: __init__.py  aws_lambda.py  aws_lambda_api_gateway.py  cli_web_socket_mock.py  cli_websocket_mock.py  lambda_alb.py  lambda_api_gateway.py  lambda_api_gateway_test.py  lambda_api_gateway_v2.py  lambda_api_gateway_web_socket.py  lambda_elb.py  lambda_http_gateway.py  lambda_input_output.py  lambda_invocation.py  lambda_sns.py  lambda_sns_event.py  lambda_sqs_standard.py
src/clearskies_aws/mocks/actions/: __init__.py  ses.py  sns.py  sqs.py  step_function.py
src/clearskies_aws/secrets/: __init__.py  akeyless_with_ssm_cache.py  parameter_store.py  parameter_store_test.py  secrets.py  secrets_manager.py  secrets_manager_test.py
src/clearskies_aws/secrets/additional_configs/: __init__.py  iam_db_auth.py  iam_db_auth_with_ssm.py  mysql_connection_dynamic_producer_via_ssh_cert_bastion.py  mysql_connection_dynamic_producer_via_ssh_cert_bastion_additional_config.py  mysql_connection_dynamic_producer_via_ssm_bastion.py
tests/: test_sample.py
tests/actions/: test_assume_role.py  test_ses.py  test_sns.py  test_sqs.py  test_step_function.py
tests/backends/: test_dynamo_db_backend.py  test_dynamo_db_condition_parser.py  test_dynamo_db_parti_ql_backend.py  test_sqs_backend.py
tests/contexts/: test_lambda_sqs_standard_partial_batch.py
tests/input_outputs/: test_lambda_api_gateway.py
tests/mocks/actions/: __init__.py  ses.py  sns.py  sqs.py  step_function.py
tests/secrets/: test_parameter_store.py  test_secrets_manager.py
