

[tool.poetry]
name = "clear-skies-aws"
version = "1.10.0"
description = "clearskies bindings for working in AWS"
authors = [
    "Conor Mancone <cmancone@gmail.com>",
    "tnijboer"
]
repository = "https://github.com/cmancone/clearskies-aws"
license = "MIT"
readme = "./README.md"
packages = [
    { include = "clearskies_aws", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.148"
clear-skies = "^1.14.4"
types-boto3 = {extras = ["dynamodb", "sns", "sqs"], version = "^1.38.13"}
akeyless = {version = "^4.0.0", optional = true}
akeyless-cloud-id = {version = "^0.2.3", optional = true}
jinja2 = {version = "^3.1.2", optional = true}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]

pre-commit = "^3.2.2"
pytest = "^8.3.5"

[tool.poetry.extras]
akeyless = ["akeyless-cloud-id", "akeyless"]
ses = ["jinja2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
