
[project]
name = "clear-skies-aws"
description = "clearskies bindings for working in AWS"
license = "MIT"
version = "2.0.0"
readme = "./README.md"
authors = [{name = "tnijboer"}, {name = "Conor Mancone", email = "cmancone@gmail.com"}]
requires-python = '>=3.11,<4.0'
dependencies = [ "aws-lambda-powertools[parser] (>=3.18.0,<4.0.0)",'boto3 (>=1.26.148,<2.0.0)', "clear-skies (>=2.0.2,<3.0.0)", 'types-boto3[dynamodb,sns,sqs] (>=1.38.13,<2.0.0)']

[project.urls]
repository = "https://github.com/clearskies-py/clearskies-aws"

[project.optional-dependencies]
akeyless = ['akeyless-cloud-id (>=0.2.3,<0.5.0)', 'akeyless (>=5.0.0,<6.0.0)']
ses = ['jinja2 (>=3.1.2,<4.0.0)']

[tool.poetry]
packages = [
    { include = "clearskies_aws", from = "src" }
]
requires-poetry = '>=2.0,<3.0'

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.4.1"

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"
