
[project]
name = "clear-skies-aws"
description = "clearskies bindings for working in AWS"
license = "MIT"
version = "2.0.0"
readme = "./README.md"
authors = [{name = "tnijboer"}, {name = "Conor Mancone", email = "cmancone@gmail.com"}]
requires-python = '>=3.11,<4.0'
dependencies = [ "aws-lambda-powertools[parser] (>=3.18.0,<4.0.0)",'boto3 (>=1.26.148,<2.0.0)', "clear-skies (>=2.0.2,<3.0.0)", 'types-boto3[dynamodb,sns,sqs] (>=1.38.13,<2.0.0)']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers"
]

[project.urls]
Repository = "https://github.com/clearskies-py/clearskies-aws"
Issues = "https://github.com/clearskies-py/clearskies-aws/issues"
Changelog = "https://github.com/clearskies-py/clearskies-aws/blob/main/CHANGELOG.md"
Documentation = "https://clearskies.info/modules/clearskies-aws/"

[project.optional-dependencies]
akeyless = ['akeyless-cloud-id (>=0.2.3,<0.5.0)', 'akeyless (>=5.0.0,<6.0.0)']
ses = ['jinja2 (>=3.1.2,<4.0.0)']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clearskies_akeyless_custom_producer"]

[tool.hatch.build]
exclude = [
    "src/clearskies_akeyless_custom_producer/*_test.py",
    "src/clearskies_akeyless_custom_producer/**/*_test.py",
    "src/clearskies_akeyless_custom_producer/integration_tests/*",
    "docs/**",
    "tests/**"
]

[tool.black]
line-length = 120
skip-magic-trailing-comma = false
preview = false

[tool.mypy]
python_version = "3.11"

exclude = [
    ".*_test\\.py$",
    "docs/.*"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = [
  "app"
]

# This is the dedicated section for uv"s configuration
[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
    "types-requests>=2.32.4"
]
